# smart_calc_c

./: README.md
src/calc/: CMakeLists.txt  Makefile  calc.h  credit.cpp  credit.h  credit.ui  deposit.cpp  deposit.h  deposit.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  r_polish_notation.c  test.c  tests.c  tests_rand.c  tests_rand.sh
src/calc/QCustomPlot-library/: CMakeLists.txt
src/calc/QCustomPlot-library/lib/: CMakeLists.txt
